@@ -1,5 +1,5 @@
 import FWCore.ParameterSet.Config as cms
 
 ISpyTrackingRecHit = cms.EDAnalyzer('ISpyTrackingRecHit' ,
-                                    iSpyTrackingRecHitTag = cms.InputTag("generalTracks")
+                                    iSpyTrackingRecHitTags = cms.VInputTag(cms.InputTag("generalTracks"))
                                     )
