@@ -67,7 +67,7 @@ process.ISpyMET.iSpyMETTag = cms.InputTag('genMetIC5GenJets')
 process.ISpyMuon.iSpyMuonTag = cms.InputTag('muons')
 process.ISpySiStripDigi.iSpySiStripDigiTag = cms.InputTag('siStripDigis:ZeroSuppressed')
 process.ISpyTrack.iSpyTrackTags = cms.VInputTag(cms.InputTag('cosmicMuons'))
-process.ISpyTrackingRecHit.iSpyTrackingRecHitTag = cms.InputTag('cosmicMuons')
+process.ISpyTrackingRecHit.iSpyTrackingRecHitTags =  cms.VInputTag(cms.InputTag('cosmicMuons'))
 process.ISpyCSCSegment.iSpyCSCSegmentTag = cms.InputTag("cscSegments")
 process.ISpyCSCWireDigi.iSpyCSCWireDigiTag = cms.InputTag('muonCSCDigis:MuonCSCWireDigi')
 process.ISpyCSCStripDigi.iSpyCSCStripDigiTag = cms.InputTag('muonCSCDigis:MuonCSCStripDigi')
