@@ -1,3 +1,10 @@
+2009-12-08 Tom McCauley <thomas.mccauley@cern.ch>
+
+	* ISpyTrackingRecHit.*: change to VInputTag
+	* ISpyTrack.cc, ISpyHBRecHit.cc, ISpyHERecHit.cc, ISpyHORecHit.cc, ISpyHFRecHit.cc, ISpyEBRecHit.cc, ISpyEERecHit.cc, ISpyESRecHit.cc:
+	evolve schema to V2
+	* ispy_*.py: change to iSpyTrackingRecHitTags where appropriate
+	
 2009-12-08  Ianna Osborne  <ianna.osborne@cern.ch>
 
 	* ISpyService.h, ISpyService.cc: Provide error reporting
